--- a/taco/Makefile
+++ b/taco/Makefile
@@ -1,5 +1,5 @@
 tensor_times_vector: tensor_times_vector.cpp kernels.cu
-	nvcc -g -O0 -L../../build/lib/ -I../../include -o tensor_times_vector tensor_times_vector.cpp kernels.cu -ltaco
+	nvcc -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o tensor_times_vector tensor_times_vector.cpp kernels.cu -ltaco
 
 clean:
 	rm tensor_times_vector
