Some renaming for taco trmm and correctness verification

--- a/taco/Makefile
+++ b/taco/Makefile
@@ -1,5 +1,5 @@
-tensor_times_vector: tensor_times_vector.cpp kernels.cu
-	nvcc -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o tensor_times_vector tensor_times_vector.cpp kernels.cu -ltaco
+taco_csr_trmm: taco_csr_trmm.cpp kernels.cu
+	nvcc -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_trmm taco_csr_trmm.cpp kernels.cu -ltaco
 
 clean:
-	rm tensor_times_vector
+	rm taco_csr_trmm
