WIP on taco tradd eval

--- a/taco/Makefile
+++ b/taco/Makefile
@@ -1,5 +1,12 @@
-taco_csr_trmm: taco_csr_trmm.cpp kernels.cu
-	nvcc -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_trmm taco_csr_trmm.cpp kernels.cu -ltaco
+FLAGS=-O3 --use_fast_math
+# FLAGS=-lineinfo
+
+taco_csr_trmm: taco_csr_trmm.cu utils.cuh
+	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_trmm taco_csr_trmm.cu -ltaco
+
+taco_csr_tradd: taco_csr_tradd.cu utils.cuh
+	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_tradd taco_csr_tradd.cu -ltaco
+
 
 clean:
-	rm taco_csr_trmm
+	rm -f taco_csr_trmm taco_csr_tradd
