--- a/taco/Makefile
+++ b/taco/Makefile
@@ -1,5 +1,5 @@
-FLAGS=-O3 --use_fast_math
-# FLAGS=-lineinfo
+# FLAGS=-O3 --use_fast_math
+FLAGS=-lineinfo
 
 taco_csr_trmm: taco_csr_trmm.cu utils.cuh
 	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_trmm taco_csr_trmm.cu -ltaco
@@ -7,6 +7,15 @@ taco_csr_trmm: taco_csr_trmm.cu utils.cuh
 taco_csr_tradd: taco_csr_tradd.cu utils.cuh
 	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_tradd taco_csr_tradd.cu -ltaco
 
+taco_csr_trmul: taco_csr_trmul.cu utils.cuh
+	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_trmul taco_csr_trmul.cu -ltaco
+
+taco_bcsr_trmul: taco_bcsr_trmul.cu utils.cuh
+	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_bcsr_trmul taco_bcsr_trmul.cu -ltaco
+
+taco_bcsr_trmm: taco_bcsr_trmm.cu utils.cuh
+	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_bcsr_trmm taco_bcsr_trmm.cu -ltaco
+
 
 clean:
-	rm -f taco_csr_trmm taco_csr_tradd
+	rm -f taco_csr_trmm taco_csr_tradd taco_bcsr_trmul taco_csr_trmul taco_bcsr_trmm
