--- a/taco/Makefile
+++ b/taco/Makefile
@@ -1,7 +1,7 @@
-# FLAGS=-O3 --use_fast_math
-FLAGS=-lineinfo
+FLAGS=-O3 --use_fast_math
+# FLAGS=-lineinfo
 
-all: taco_csr_trmm taco_csr_tradd taco_csr_trmul taco_bcsr_trmm taco_bcsr_trmul
+all: taco_csr_trmm taco_csr_tradd taco_csr_trmul taco_bcsr_trmm taco_bcsr_trmul tmp
 
 taco_csr_trmm: taco_csr_trmm.cu utils.cuh
 	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_csr_trmm taco_csr_trmm.cu -ltaco
@@ -18,6 +18,9 @@ taco_bcsr_trmul: taco_bcsr_trmul.cu utils.cuh
 taco_bcsr_trmm: taco_bcsr_trmm.cu utils.cuh
 	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o taco_bcsr_trmm taco_bcsr_trmm.cu -ltaco
 
+tmp: tmp.cu utils.cuh
+	nvcc ${FLAGS} -L${TACO_HOME}/build/lib/ -I${TACO_HOME}/include -o tmp tmp.cu -ltaco
+
 
 clean:
-	rm -f taco_csr_trmm taco_csr_tradd taco_bcsr_trmul taco_csr_trmul taco_bcsr_trmm
+	rm -f taco_csr_trmm taco_csr_tradd taco_bcsr_trmul taco_csr_trmul taco_bcsr_trmm tmp
